--- a/scss/main.scss
+++ b/scss/main.scss
@@ -205,9 +205,7 @@ body {
           top: 15%;
           left: 0%;
 
-          &.wide-only {
-            display: none;
-          }
+          
         }
       }
       .bio-text {
